distro/openshift/apicurio-projectkeep.local-api-deploy.yml
# Apicurio API Deployment Configuration
# #####################################
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    creationTimestamp: null
    labels:
      app: apicurio-studio-api
      template: apicurio-studio
    name: apicurio-studio-api
  spec:
    replicas: 1
    selector:
      app: apicurio-studio-api
      deploymentconfig: apicurio-studio-api
    strategy:
      type: Recreate
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      activeDeadlineSeconds: 21600
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: apicurio-studio-api
          deploymentconfig: apicurio-studio-api
          template: apicurio-studio
      spec:
        replicas: 1
        containers:
        - image: api:latest-release
          imagePullPolicy: Always
          name: apicurio-studio-api
          ports:
          - containerPort: 8080
            protocol: TCP
          resources:
            limits:
              cpu: ${API_CPU_LIMIT}
              memory: ${API_MEM_LIMIT}
            requests:
              cpu: ${API_CPU_REQUEST}
              memory: ${API_MEM_REQUEST}
          livenessProbe:
            httpGet:
              path: /system/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /system/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
    triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - apicurio-studio-api
        from:
          kind: ImageStreamTag
          name: 'api:latest-release'
    - type: ConfigChange
  status: {}
