distro/openshift/apicurio-projectkeep.local-ui-service.yml
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      app: apicurio-studio-ui
      template: apicurio-studio
    name: apicurio-studio-ui
  spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: apicurio-studio-ui
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
