distro/openshift/apicurio-projectkeep.local-ws-service.yml
- apiVersion: v1
  kind: Service
  metadata:
    name: apicurio-studio-ws
    labels:
      app: apicurio-studio-ws
      template: apicurio-studio
    annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path: '/metrics'
  spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: apicurio-studio-ws
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
