distro/openshift/apicurio-projectkeep.local-api-route.yml
- apiVersion: v1
  kind: Route
  metadata:
    name: apicurio-studio-api
    creationTimestamp: null
    labels:
      app: apicurio-studio-api
      template: apicurio-studio
  spec:
    host: ${API_ROUTE}
    to:
      kind: Service
      name: apicurio-studio-api
      weight: 100
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
    wildcardPolicy: None
