distro/openshift/apicurio-projectkeep.local-ui-route.yml
- apiVersion: v1
  kind: Route
  metadata:
    name: apicurio-studio-ui
    creationTimestamp: null
    labels:
      app: apicurio-studio-ui
      template: apicurio-studio
  spec:
    host: ${UI_ROUTE}
    to:
      kind: Service
      name: apicurio-studio-ui
      weight: 100
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
    wildcardPolicy: None
