distro/openshift/apicurio-projectkeep.local-ws-route.yml
- apiVersion: v1
  kind: Route
  metadata:
    name: apicurio-studio-ws
    creationTimestamp: null
    labels:
      app: apicurio-studio-ws
      template: apicurio-studio
  spec:
    host: ${WS_ROUTE}
    to:
      kind: Service
      name: apicurio-studio-ws
      weight: 100
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
    wildcardPolicy: None
